# algorithm-and-programming

./: .gitignore  CMakeLists.txt  README.md
assignments/first/: assignment.cpp
assignments/fourth/: derszteler.cpp  references.cpp  written.md
assignments/fourth/examples/: demo.cpp
assignments/fourth/include/: meine_funktionen.hpp
assignments/fourth/src/: meine_funktionen.cpp
assignments/second/: uebungscode_02_03.cpp  uebungscode_02_04.cpp
assignments/second_assignment/: README.md  uebungscode_02_03.cpp
assignments/third/: sin.cpp  sqrt.cpp
assignments/uebungscode_05/examples/: aufg1.cpp  aufg2.cpp  aufg3.cpp
assignments/uebungscode_05/include/: minsort_in_place.hpp
assignments/uebungscode_05/include/hanoi/: hanoi.hpp  hanoi_loesen.hpp
assignments/uebungscode_05/src/: hanoi.cpp  hanoi_loesen.cpp  minsort_in_place.cpp
